<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:orientation="vertical"
    tools:context="com.example.tecnosystem.heilhealthy.Ingresar"
    android:weightSum="1">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="479dp"
        android:layout_weight="2.31">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="1"
            tools:context="com.example.tecnosystem.proyectofinalhospital.Ingresar">

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <TextView
                android:id="@+id/textView8"
                style="@style/textos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sede"
                android:textColor="@android:color/background_dark" />

            <Spinner
                android:id="@+id/spSede"
                style="@style/Combo"
                android:layout_width="match_parent"
                android:layout_height="39dp" />

            <TextView
                android:id="@+id/textView10"
                style="@style/textos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Especialista"
                android:textColor="@android:color/background_dark" />

            <Spinner
                android:id="@+id/spEspecialista"
                style="@style/Combo"
                android:layout_width="match_parent"
                android:layout_height="39dp" />

            <TextView
                android:id="@+id/textView9"
                style="@style/textos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hora"
                android:textColor="@android:color/background_dark" />

            <Spinner
                android:id="@+id/spHorario"
                style="@style/Combo"
                android:layout_width="match_parent"
                android:layout_height="39dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="43dp" />

            <Button
                style="@style/btnn"
                android:id="@+id/bntPrioritaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="prioritaria"
                android:text="@string/Prioritaria" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                style="@style/btnn"
                android:id="@+id/btnGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="general"
                android:text="@string/General" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                style="@style/btnn"
                android:id="@+id/btnEspecialista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="especialista"
                android:text="@string/Especialista" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otras"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="113dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="          " />

                <Button
                    android:id="@+id/btnBuscarCita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/btnnTres"
                    android:text="@string/Buscar" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="                            " />

                <Button
                    style="@style/btnnTres"
                    android:id="@+id/btnEditarCita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Editar" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="                         " />

            </TableRow>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
